# databricks-lakehouse-mlops

./: .gitignore  LICENSE  README.md  SECURITY.md  databricks.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
data/: generate_churn_data.py
docs/: COST_ESTIMATE.md
infra/: deploy.sh  main.bicep  teardown.sh
infra/databricks/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
notebooks/: 01_bronze_ingest.py  02_silver_clean.py  03_gold_features.py  04_train_mlflow.py  05_batch_inference.py  06_monitoring.py  07_promote_model.py
resources/: churn_jobs.yml
serving/: databricks.yml
src/: train_local.py
src/databricks_lakehouse_mlops/: __init__.py  contracts.py  pandas_transforms.py  spark_transforms.py  train_local.py
tests/: test_bundle_config.py  test_data_quality.py  test_spark_transforms.py  test_train_local.py
