[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-lakehouse-mlops"
version = "0.1.0"
description = "Reproducible Azure Databricks lakehouse MLOps with Jobs, MLflow, and monitoring"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<4",
    "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6,<7",
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402", "I001"]
